# Codex_crewai_160925

./: requirements.txt
test_codex/: README.md  pyproject.toml
test_codex/run_outputs/: reporting_analyst_output.txt
test_codex/src/test_codex/: crew.py  main.py
test_codex/src/test_codex/config/: agents.yaml
