[project]
name = "test_codex"
version = "0.1.0"
description = "TEST_CODEX using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
test_codex = "test_codex.main:run"
run_crew = "test_codex.main:run"
train = "test_codex.main:train"
replay = "test_codex.main:replay"
test = "test_codex.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
